[tool.poetry]
name = "kip"
version = "0.1.0"
description = ""
authors = ["Artur Dernst <artur.dernst@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
scipy = "^1.15.3"
scikit-image = "^0.25.2"
tqdm = "^4.67.1"
scikit-learn = "^1.7.0"
tensorflow = "^2.19.0"
keras = "^3.10.0"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
